对RNN模型做了一些调整。

--- a/jupyterlab/Simple_RNN.ipynb
+++ b/jupyterlab/Simple_RNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "id": "c79d9768-347c-4f76-b310-7ccf808a033e",
    "metadata": {},
    "outputs": [],
@@ -17,22 +17,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "f2eb4441-d214-4e9b-b69b-4282392f0355",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x1124a2e28>"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
-    "TIME_STEP = 5                               # rnn 定义的时间步数\n",
+    "TIME_STEP = 10                               # rnn 定义的时间步数\n",
     "INPUT_SIZE = 1                              # 因为输入的是1个数字，也就是1个feature\n",
-    "LR = 0.02                                   # learning rate\n",
+    "LR = 0.01                                   # learning rate\n",
     "HIDDEN_SIZE = 64                            # 隐藏层的特征数量\n",
-    "torch.manual_seed(1)                        # 随机数种子\n"
+    "torch.manual_seed(1)                        # 随机数种子"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 147,
    "id": "26e8c479-86a0-4883-828f-a5e494aace11",
    "metadata": {},
    "outputs": [],
@@ -44,7 +54,7 @@
     "        self.rnn = nn.RNN(                              # 自己定义一个RNN神经网络\n",
     "            input_size = INPUT_SIZE,                    # 输入 x 的feature 维度\n",
     "            hidden_size = HIDDEN_SIZE,                  # 隐状态 hidden_state 中的feature维度\n",
-    "            num_layers = 3,                             # RNN 的层数\n",
+    "            num_layers = 5,                             # RNN 的层数\n",
     "            nonlinearity='relu',                        # 指定激活函数 [‘tanh’ | ’relu’]. 默认: ‘tanh’\n",
     "            bias = True,                                # 如果是 False , 那么 RNN 层就不会使用偏置权重 b_ih 和 b_hh, 默认: True\n",
     "            batch_first = True,                         # 如果 True, 输入Tensor的shape应该是(batch, seq, features),并且输出也是一样.\n",
@@ -67,20 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 148,
    "id": "6d4d19f0-29ba-44b5-bbba-7a7453844c55",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "rnn = RNN()\n",
-    "optimizer = torch.optim.Adam(rnn.parameters(), lr=LR, weight_decay=1e-6)\n",
-    "loss_func = nn.MSELoss()"
+    "optimizer = torch.optim.Adam(rnn.parameters(), lr=LR, weight_decay=1e-6)    # 定义了优化函数ADAM对RNN的参数反向优化，定义了 learning rate 和 权重衰减率\n",
+    "loss_func = nn.MSELoss()                                                    # 定义了模型的损失函数用 mean-square-error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 150,
    "id": "f6dcca70-71cf-4d7f-95ea-bbc063970f01",
    "metadata": {},
    "outputs": [
@@ -88,206 +97,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step:0  loss:0.769753754\n",
-      "step:1  loss:0.018608779\n",
-      "step:2  loss:0.196479589\n",
-      "step:3  loss:0.071586773\n",
-      "step:4  loss:0.012409372\n",
-      "step:5  loss:0.044172186\n",
-      "step:6  loss:0.158242732\n",
-      "step:7  loss:0.023251805\n",
-      "step:8  loss:0.023255471\n",
-      "step:9  loss:0.033692829\n",
-      "step:10  loss:0.047859583\n",
-      "step:11  loss:0.024848435\n",
-      "step:12  loss:0.027895218\n",
-      "step:13  loss:0.020639541\n",
-      "step:14  loss:0.021983327\n",
-      "step:15  loss:0.019498849\n",
-      "step:16  loss:0.027365714\n",
-      "step:17  loss:0.032652780\n",
-      "step:18  loss:0.015358785\n",
-      "step:19  loss:0.008105570\n",
-      "step:20  loss:0.013356498\n",
-      "step:21  loss:0.013916977\n",
-      "step:22  loss:0.029352468\n",
-      "step:23  loss:0.014032751\n",
-      "step:24  loss:0.003490339\n",
-      "step:25  loss:0.001934425\n",
-      "step:26  loss:0.025918942\n",
-      "step:27  loss:0.002195222\n",
-      "step:28  loss:0.008604687\n",
-      "step:29  loss:0.001199994\n",
-      "step:30  loss:0.008275824\n",
-      "step:31  loss:0.004451863\n",
-      "step:32  loss:0.015970895\n",
-      "step:33  loss:0.005393638\n",
-      "step:34  loss:0.005837458\n",
-      "step:35  loss:0.002005154\n",
-      "step:36  loss:0.002670521\n",
-      "step:37  loss:0.004802625\n",
-      "step:38  loss:0.010009422\n",
-      "step:39  loss:0.003454528\n",
-      "step:40  loss:0.001179569\n",
-      "step:41  loss:0.001060208\n",
-      "step:42  loss:0.005945745\n",
-      "step:43  loss:0.003880204\n",
-      "step:44  loss:0.006506270\n",
-      "step:45  loss:0.001725445\n",
-      "step:46  loss:0.000770308\n",
-      "step:47  loss:0.000272428\n",
-      "step:48  loss:0.004655907\n",
-      "step:49  loss:0.001551767\n",
-      "step:50  loss:0.003057210\n",
-      "step:51  loss:0.000475838\n",
-      "step:52  loss:0.000996751\n",
-      "step:53  loss:0.000876740\n",
-      "step:54  loss:0.003314790\n",
-      "step:55  loss:0.001240851\n",
-      "step:56  loss:0.001575481\n",
-      "step:57  loss:0.000283298\n",
-      "step:58  loss:0.000657732\n",
-      "step:59  loss:0.000299390\n",
-      "step:60  loss:0.001830570\n",
-      "step:61  loss:0.000378167\n",
-      "step:62  loss:0.000513718\n",
-      "step:63  loss:0.000064605\n",
-      "step:64  loss:0.000443299\n",
-      "step:65  loss:0.000475278\n",
-      "step:66  loss:0.001039790\n",
-      "step:67  loss:0.000344274\n",
-      "step:68  loss:0.000215876\n",
-      "step:69  loss:0.000037173\n",
-      "step:70  loss:0.000343775\n",
-      "step:71  loss:0.000310807\n",
-      "step:72  loss:0.000746909\n",
-      "step:73  loss:0.000154534\n",
-      "step:74  loss:0.000139684\n",
-      "step:75  loss:0.000035487\n",
-      "step:76  loss:0.000516682\n",
-      "step:77  loss:0.000244754\n",
-      "step:78  loss:0.000462725\n",
-      "step:79  loss:0.000097666\n",
-      "step:80  loss:0.000028702\n",
-      "step:81  loss:0.000026139\n",
-      "step:82  loss:0.000299570\n",
-      "step:83  loss:0.000147646\n",
-      "step:84  loss:0.000196761\n",
-      "step:85  loss:0.000034615\n",
-      "step:86  loss:0.000025640\n",
-      "step:87  loss:0.000037565\n",
-      "step:88  loss:0.000199893\n",
-      "step:89  loss:0.000080964\n",
-      "step:90  loss:0.000133258\n",
-      "step:91  loss:0.000009783\n",
-      "step:92  loss:0.000027299\n",
-      "step:93  loss:0.000030663\n",
-      "step:94  loss:0.000148521\n",
-      "step:95  loss:0.000045830\n",
-      "step:96  loss:0.000050497\n",
-      "step:97  loss:0.000002122\n",
-      "step:98  loss:0.000033787\n",
-      "step:99  loss:0.000035197\n",
-      "step:100  loss:0.000095816\n",
-      "step:101  loss:0.000030531\n",
-      "step:102  loss:0.000012179\n",
-      "step:103  loss:0.000001218\n",
-      "step:104  loss:0.000036318\n",
-      "step:105  loss:0.000021836\n",
-      "step:106  loss:0.000044556\n",
-      "step:107  loss:0.000010453\n",
-      "step:108  loss:0.000000902\n",
-      "step:109  loss:0.000003219\n",
-      "step:110  loss:0.000028078\n",
-      "step:111  loss:0.000014330\n",
-      "step:112  loss:0.000025386\n",
-      "step:113  loss:0.000003003\n",
-      "step:114  loss:0.000000818\n",
-      "step:115  loss:0.000005454\n",
-      "step:116  loss:0.000027964\n",
-      "step:117  loss:0.000011146\n",
-      "step:118  loss:0.000011652\n",
-      "step:119  loss:0.000000675\n",
-      "step:120  loss:0.000004959\n",
-      "step:121  loss:0.000005798\n",
-      "step:122  loss:0.000019967\n",
-      "step:123  loss:0.000005837\n",
-      "step:124  loss:0.000002366\n",
-      "step:125  loss:0.000000299\n",
-      "step:126  loss:0.000006378\n",
-      "step:127  loss:0.000005211\n",
-      "step:128  loss:0.000009009\n",
-      "step:129  loss:0.000002221\n",
-      "step:130  loss:0.000000222\n",
-      "step:131  loss:0.000000741\n",
-      "step:132  loss:0.000006388\n",
-      "step:133  loss:0.000003416\n",
-      "step:134  loss:0.000005509\n",
-      "step:135  loss:0.000000560\n",
-      "step:136  loss:0.000000602\n",
-      "step:137  loss:0.000001183\n",
-      "step:138  loss:0.000006407\n",
-      "step:139  loss:0.000002092\n",
-      "step:140  loss:0.000001895\n",
-      "step:141  loss:0.000000055\n",
-      "step:142  loss:0.000001696\n",
-      "step:143  loss:0.000001367\n",
-      "step:144  loss:0.000003746\n",
-      "step:145  loss:0.000000938\n",
-      "step:146  loss:0.000000182\n",
-      "step:147  loss:0.000000135\n",
-      "step:148  loss:0.000001951\n",
-      "step:149  loss:0.000001005\n",
-      "step:150  loss:0.000001580\n",
-      "step:151  loss:0.000000189\n",
-      "step:152  loss:0.000000089\n",
-      "step:153  loss:0.000000348\n",
-      "step:154  loss:0.000001712\n",
-      "step:155  loss:0.000000651\n",
-      "step:156  loss:0.000000620\n",
-      "step:157  loss:0.000000007\n",
-      "step:158  loss:0.000000477\n",
-      "step:159  loss:0.000000458\n",
-      "step:160  loss:0.000001329\n",
-      "step:161  loss:0.000000294\n",
-      "step:162  loss:0.000000033\n",
-      "step:163  loss:0.000000053\n",
-      "step:164  loss:0.000000708\n",
-      "step:165  loss:0.000000393\n",
-      "step:166  loss:0.000000486\n",
-      "step:167  loss:0.000000068\n",
-      "step:168  loss:0.000000054\n",
-      "step:169  loss:0.000000142\n",
-      "step:170  loss:0.000000606\n",
-      "step:171  loss:0.000000202\n",
-      "step:172  loss:0.000000130\n",
-      "step:173  loss:0.000000003\n",
-      "step:174  loss:0.000000206\n",
-      "step:175  loss:0.000000165\n",
-      "step:176  loss:0.000000394\n",
-      "step:177  loss:0.000000070\n",
-      "step:178  loss:0.000000008\n",
-      "step:179  loss:0.000000032\n",
-      "step:180  loss:0.000000290\n",
-      "step:181  loss:0.000000121\n",
-      "step:182  loss:0.000000142\n",
-      "step:183  loss:0.000000010\n",
-      "step:184  loss:0.000000054\n",
-      "step:185  loss:0.000000065\n",
-      "step:186  loss:0.000000196\n",
-      "step:187  loss:0.000000060\n",
-      "step:188  loss:0.000000012\n",
-      "step:189  loss:0.000000007\n",
-      "step:190  loss:0.000000104\n",
-      "step:191  loss:0.000000057\n",
-      "step:192  loss:0.000000083\n",
-      "step:193  loss:0.000000008\n",
-      "step:194  loss:0.000000009\n",
-      "step:195  loss:0.000000029\n",
-      "step:196  loss:0.000000106\n",
-      "step:197  loss:0.000000032\n",
-      "step:198  loss:0.000000019\n",
-      "step:199  loss:0.000000003\n"
+      "step:0  loss:0.616753757\n",
+      "step:20  loss:0.599726737\n",
+      "step:40  loss:0.598618388\n",
+      "step:60  loss:0.614574015\n",
+      "step:80  loss:0.597458482\n",
+      "step:100  loss:0.600382805\n",
+      "step:120  loss:0.597702026\n",
+      "step:140  loss:0.937314034\n",
+      "step:160  loss:0.600224555\n",
+      "step:180  loss:0.599694431\n",
+      "step:200  loss:0.590930045\n",
+      "step:220  loss:0.094163097\n",
+      "step:240  loss:0.582085848\n",
+      "step:260  loss:0.578835607\n",
+      "step:280  loss:0.589287341\n",
+      "step:300  loss:0.729984403\n",
+      "step:320  loss:0.597867250\n",
+      "step:340  loss:0.536698222\n",
+      "step:360  loss:0.505166292\n",
+      "step:380  loss:0.534887910\n",
+      "step:400  loss:35.706615448\n",
+      "step:420  loss:0.609800935\n",
+      "step:440  loss:0.600955725\n",
+      "step:460  loss:0.599595129\n",
+      "step:480  loss:0.600089133\n",
+      "step:500  loss:0.600345314\n",
+      "step:520  loss:0.602997720\n",
+      "step:540  loss:0.602400184\n",
+      "step:560  loss:0.601933479\n",
+      "step:580  loss:0.601537406\n",
+      "step:600  loss:0.601230443\n",
+      "step:620  loss:0.600997031\n",
+      "step:640  loss:0.600822091\n",
+      "step:660  loss:0.600693882\n",
+      "step:680  loss:0.600604296\n",
+      "step:700  loss:0.600492239\n",
+      "step:720  loss:2.285447359\n",
+      "step:740  loss:0.721879363\n",
+      "step:760  loss:0.610277176\n",
+      "step:780  loss:0.629911065\n",
+      "step:800  loss:0.604597270\n",
+      "step:820  loss:0.604400277\n",
+      "step:840  loss:0.447923094\n",
+      "step:860  loss:0.223692492\n",
+      "step:880  loss:0.211035416\n",
+      "step:900  loss:6.988791466\n",
+      "step:920  loss:0.164445505\n",
+      "step:940  loss:0.765079618\n",
+      "step:960  loss:0.240110829\n",
+      "step:980  loss:0.094379984\n",
+      "step:1000  loss:0.074454978\n",
+      "step:1020  loss:0.089155726\n",
+      "step:1040  loss:0.054146111\n",
+      "step:1060  loss:0.054339647\n",
+      "step:1080  loss:0.049799632\n",
+      "step:1100  loss:0.045222241\n",
+      "step:1120  loss:0.040572874\n",
+      "step:1140  loss:0.036645211\n",
+      "step:1160  loss:0.032169033\n",
+      "step:1180  loss:0.027553458\n",
+      "step:1200  loss:0.018533474\n",
+      "step:1220  loss:0.013316480\n",
+      "step:1240  loss:0.005987305\n",
+      "step:1260  loss:0.003754137\n",
+      "step:1280  loss:0.003038892\n",
+      "step:1300  loss:0.001233196\n",
+      "step:1320  loss:0.007575143\n",
+      "step:1340  loss:0.007729287\n",
+      "step:1360  loss:0.004195057\n",
+      "step:1380  loss:0.852181315\n",
+      "step:1400  loss:0.033068143\n",
+      "step:1420  loss:0.001011028\n",
+      "step:1440  loss:0.000368611\n",
+      "step:1460  loss:0.000041177\n",
+      "step:1480  loss:0.000382410\n",
+      "step:1500  loss:0.000497294\n",
+      "step:1520  loss:0.000196195\n",
+      "step:1540  loss:0.001530558\n",
+      "step:1560  loss:0.000007572\n",
+      "step:1580  loss:0.002693258\n",
+      "step:1600  loss:0.000526988\n",
+      "step:1620  loss:0.002756933\n",
+      "step:1640  loss:0.001788675\n",
+      "step:1660  loss:0.001208461\n",
+      "step:1680  loss:0.003041540\n",
+      "step:1700  loss:0.000213963\n",
+      "step:1720  loss:0.000709375\n",
+      "step:1740  loss:0.000509458\n",
+      "step:1760  loss:0.000014579\n",
+      "step:1780  loss:0.000001319\n",
+      "step:1800  loss:0.000001049\n",
+      "step:1820  loss:0.000000150\n",
+      "step:1840  loss:0.000000004\n",
+      "step:1860  loss:0.000000001\n",
+      "step:1880  loss:0.000000000\n",
+      "step:1900  loss:0.000000000\n",
+      "step:1920  loss:0.000000000\n",
+      "step:1940  loss:0.000000000\n",
+      "step:1960  loss:0.000000000\n",
+      "step:1980  loss:0.000000000\n"
      ]
     }
    ],
@@ -295,24 +204,27 @@
     "\n",
     "h_state = None                                                          # 起始时输入给RNN的hidden_state就是None\n",
     "\n",
-    "for step in range(200):                                                 # 计算２００次。相当于２００个顺序的时间片数据丢进去计算\n",
+    "for step in range(2000):                                                 # 计算２００次。相当于２００个顺序的时间片数据丢进去计算\n",
     "    start, end = step*np.pi, (step+1)*np.pi                             # 设计一小段数据起始点\n",
     "    steps = np.linspace(start, end, TIME_STEP, dtype=np.float32)        # 生成一小段数据\n",
     "    x_np = np.sin(steps)                                                # 这就是用来输入的数据\n",
     "    y_np = np.cos(steps)                                                # 这就是需要被预测的数据\n",
-    "    x = Variable(torch.from_numpy(x_np[np.newaxis, :, np.newaxis]))     # shape 1D -> 3D\n",
-    "    y = Variable(torch.from_numpy(y_np[np.newaxis, :, np.newaxis]))\n",
+    "    \n",
+    "    # x = Variable(torch.from_numpy(x_np[np.newaxis, :, np.newaxis]))     # x_np[np.newaxis, :, np.nexaxis]这句将x_np从1维(n)转化成3维(1,n,1);然后成为输入变量x\n",
+    "    # y = Variable(torch.from_numpy(y_np[np.newaxis, :, np.newaxis]))     # y_np[np.newaxis, :, np.nexaxis]这句将y_np从1维(n)转化成3维(1,n,1);然后成为真实值 y\n",
     "    # print(x.size())\n",
     "    # print(y.size())\n",
-    "    prediction, h_state = rnn(x, h_state)                               # 这就是一次RNN训练出来的结果\n",
-    "    h_state = Variable(h_state.data)                                    # 把tensor中的数据取出来\n",
-    "\n",
-    "    loss = loss_func(prediction, y)\n",
-    "    optimizer.zero_grad()\n",
-    "    loss.backward()\n",
-    "    optimizer.step()\n",
     "    \n",
-    "    print(\"step:{}  loss:{:.9f}\".format(step, loss.data.float()))\n",
+    "    prediction, h_state = rnn(x, h_state)                               # 这就是一次RNN模型forward()得出来的结果\n",
+    "    h_state = Variable(h_state.data)                                    # 把h_state(tensor)中的数据取出来,给下一轮的rnn作为数据输入\n",
+    "\n",
+    "    loss = loss_func(prediction, y)                                     # 用损失函数计算误差\n",
+    "    optimizer.zero_grad()                                               # 清空优化器梯度\n",
+    "    loss.backward()                                                     # 反向传播求解梯度\n",
+    "    optimizer.step()                                                    # 更新权重的参数\n",
+    "    \n",
+    "    if step%20==0:\n",
+    "        print(\"step:{}  loss:{:.9f}\".format(step, loss.data.float()))\n",
     "\n",
     "#     plt.ion()                                                           # 把实际图和预测图动态打印出来\n",
     "#     plt.plot(steps, y_np, color='b')\n",
