--- a/jupyterlab/Linear_BN_ReLU.ipynb
+++ b/jupyterlab/Linear_BN_ReLU.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 一个mnist识别的代码\n",
+    "# 带了batch_normalization的linear模型实现mnist识别的代码\n",
     "import torch\n",
     "from torch import nn\n",
     "from torch.autograd import Variable\n",
