RNN实现了股票预测

--- a/jupyterlab/Simple_RNN.ipynb
+++ b/jupyterlab/Simple_RNN.ipynb
@@ -67,22 +67,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d4d19f0-29ba-44b5-bbba-7a7453844c55",
+   "id": "5e52c858-7c44-4db1-ae6b-c384c93ad48c",
    "metadata": {},
    "outputs": [],
    "source": [
     "rnn = RNN()\n",
     "optimizer = torch.optim.Adam(rnn.parameters(), lr=LR, weight_decay=1e-6)    # 定义了优化函数ADAM对RNN的参数反向优化，定义了 learning rate 和 权重衰减率\n",
-    "loss_func = nn.MSELoss()                                                    # 定义了模型的损失函数用 mean-square-error"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6dcca70-71cf-4d7f-95ea-bbc063970f01",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "loss_func = nn.MSELoss()                                                    # 定义了模型的损失函数用 mean-square-error\n",
+    "\n",
     "\n",
     "h_state = None                                                          # 起始时输入给RNN的hidden_state就是None\n",
     "\n",
@@ -235,8 +227,193 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 下面试试股票数据处理"
+    "################# 下面试试股票数据处理 #################"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae5bc6cd-84a8-4042-90de-0ddad98d3742",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53d3500d-7c41-429b-907e-f82cf2430061",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 加载数据\n",
+    "dataset = pd.read_csv(\"000600.csv\", index_col=0)\n",
+    "dataset = dataset.drop(['date','prediction'], axis=1)\n",
+    "# print(dataset.columns)\n",
+    "# print(dataset.tail())\n",
+    "dataset['updown'] = dataset['updown']\n",
+    "print(dataset.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80098777-883e-4103-ba71-26a85e060e1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 把数据分成训练数据和测试数据\n",
+    "# print(dataset)\n",
+    "n_train = 120\n",
+    "train = dataset.iloc[:n_train, :].reset_index(drop=True)\n",
+    "test  = dataset.iloc[n_train:, :].reset_index(drop=True)\n",
+    "\n",
+    "train_x, train_y = train.iloc[:, 1:], train.iloc[:, 0]\n",
+    "test_x, test_y = test.iloc[:, 1:], test.iloc[:, 0]\n",
+    "\n",
+    "train_y = np.array(train_y).reshape(-1, 1)\n",
+    "test_y = np.array(test_y).reshape(-1, 1)\n",
+    "\n",
+    "print(train_x.shape)\n",
+    "print(train_y.shape)\n",
+    "print(test_x.shape)\n",
+    "print(test_y.shape)\n",
+    "# print(train_x.head())\n",
+    "# print(test_y)\n",
+    "print(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dbb922a-6a93-4c67-b51c-622dee71748f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 数据转换成 tesnsor\n",
+    "train_x = torch.tensor(np.array(train_x))\n",
+    "train_y = torch.tensor(np.array(train_y))\n",
+    "test_x = torch.tensor(np.array(test_x))\n",
+    "test_y = torch.tensor(np.array(test_y))\n",
+    "# print(train_x.shape)\n",
+    "# print(train_y.shape)\n",
+    "# print(test_x.shape)\n",
+    "# print(test_y.shape)\n",
+    "\n",
+    "# 数据转成 batch 的格式\n",
+    "batch_count = 8               # 把训练数据切割成 batch_count 个batch\n",
+    "batch_size = 15               # 每个batch里面有 batch_size 个数据\n",
+    "\n",
+    "# 把训练数据分成 8 个batch，每个 15 个数据\n",
+    "train_x = train_x.reshape(batch_count, batch_size, 117)\n",
+    "train_y = train_y.reshape(batch_count, batch_size, 1)\n",
+    "# 把测试数据分成 2 个batch，每个 batch 有 15 个数据\n",
+    "test_x = test_x.reshape(2, 15, 117)\n",
+    "test_y = test_y.reshape(2, 15, 1)\n",
+    "\n",
+    "print(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f0b1054-e3bc-45ad-bba6-96f98d3e0341",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 开始定义 RNN 模型\n",
+    "TIME_STEP = 15\n",
+    "INPUT_SIZE = 117\n",
+    "HIDDEN_SIZE = 256\n",
+    "\n",
+    "class RNN(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(RNN, self).__init__()\n",
+    "        \n",
+    "        self.rnn = nn.RNN(\n",
+    "                input_size = INPUT_SIZE,                    # 输入 x 的feature 维度\n",
+    "                hidden_size = HIDDEN_SIZE,                  # 隐状态 hidden_state 中的feature维度\n",
+    "                num_layers = 5,                             # RNN 的层数\n",
+    "                nonlinearity='relu',                        # 指定激活函数 [‘tanh’ | ’relu’]. 默认: ‘tanh’\n",
+    "                bias = True,                                # 如果是 False , 那么 RNN 层就不会使用偏置权重 b_ih 和 b_hh, 默认: True\n",
+    "                batch_first = True,                         # 如果 True, 输入Tensor的shape应该是(batch, seq, features),并且输出也是一样.\n",
+    "                dropout = 0,                                # 如果值非零, 那么除了最后一层外, 其它层的输出都会套上一个 dropout 层\n",
+    "                bidirectional = False                       # 如果 True , 将会变成一个双向 RNN, 默认为 False\n",
+    "        )\n",
+    "        self.out = nn.Linear(HIDDEN_SIZE, 1)\n",
+    "        \n",
+    "    def forward(self, x, h_state):\n",
+    "        r_out, h_state = self.rnn(x, h_state)\n",
+    "        outs = []\n",
+    "        for time_step in range(TIME_STEP):\n",
+    "            outs.append(self.out(r_out[:, time_step, :]))\n",
+    "\n",
+    "        return torch.stack(outs, dim=1), h_state\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2877e5f-6cb4-4851-a07b-0a1c121e9641",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# 初始化 RNN 模型\n",
+    "rnn = RNN()\n",
+    "LR = 0.01\n",
+    "loss_func = nn.MSELoss()\n",
+    "optimizer = torch.optim.Adam(rnn.parameters(), lr=LR, weight_decay=1e-7)\n",
+    "\n",
+    "i = 0\n",
+    "h_state = None\n",
+    "\n",
+    "# 训练 RNN 模型\n",
+    "for step in range(800):\n",
+    "    i = i+1\n",
+    "    rnn = rnn.double()\n",
+    "    pred, h_state = rnn(train_x, h_state)\n",
+    "    h_state = h_state.data\n",
+    "    loss = loss_func(pred, train_y)\n",
+    "    if (i+1)%50 == 0:\n",
+    "        print(loss)\n",
+    "    optimizer.zero_grad()\n",
+    "    loss.backward()\n",
+    "    optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60de7088-2b08-4373-a294-6ddaa5a43455",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 用模型来做测试数据的误差\n",
+    "h_state = None\n",
+    "pred, h_state = rnn(test_x, h_state)\n",
+    "loss = loss_func(pred, test_y)\n",
+    "print(loss)\n",
+    "print(pred)\n",
+    "actual_line = np.array(test_y).flatten().tolist()\n",
+    "pred_line = pred.data.numpy().flatten()\n",
+    "num = list(range(30))\n",
+    "plt.plot(num, actual_line, 'r-')\n",
+    "plt.plot(num, pred_line, 'b-')\n",
+    "plt.draw()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0125af7c-b15b-4ebb-ae0d-bf496563f44c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
